--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="styles/mx-pipeline.css">
+    <link rel="stylesheet" href="css/mx-pipeline.min.css">
   </head>
   <body ng-app="mxPipelineApp">
     <!--[if lt IE 7]>
